--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,3 +24,9 @@ textarea {
     margin: 0px;
     vertical-align: text-bottom;
 }
+th {
+    border: 5px solid black;
+}
+tr {
+    border: 5px solid red;
+}
