--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,9 +24,12 @@ textarea {
     margin: 0px;
     vertical-align: text-bottom;
 }
-th {
-    border: 5px solid black;
+td {
+    border: 3px solid black;
 }
 tr {
-    border: 5px solid red;
+    border: 3px solid black;
+}
+table {
+    border: 3px solid black;
 }
